--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.13.1",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
