--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "firebase": "^10.13.1",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
